--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,13 @@
     "@bull-board/api": "^5.21.2",
     "@bull-board/express": "^5.21.2",
     "@elastic/elasticsearch": "^8.15.0",
+    "@nestjs/apollo": "^12.2.2",
     "@nestjs/bull": "^10.2.0",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.4",
     "@nestjs/elasticsearch": "^10.0.2",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
@@ -30,10 +32,13 @@
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.3.0",
     "@types/passport-local": "^1.0.38",
+    "apollo-server-express": "^3.13.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "graphql": "^16.11.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
