--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "migration:generate": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:generate -d src/ormconfig.ts src/migrations/auto"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.0",
     "@apollo/gateway": "^2.11.2",
     "apollo-server-express": "^3.12.1",
     "@bull-board/api": "^5.21.2",
@@ -35,7 +36,6 @@
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.3.0",
     "@types/passport-local": "^1.0.38",
-
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.3",
